--- a/styles/main.scss
+++ b/styles/main.scss
@@ -350,7 +350,6 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     object-fit: cover;
     transition: transform 0.3s ease;
   }
@@ -813,6 +812,7 @@ body {
     .product-card.div4 , .product-card.div5{
       width: 230px;
       height: 410px;
+      border-radius: 6.25px;
     }
     
     .product-card__price {
@@ -870,9 +870,7 @@ body {
       position: relative;
       width: 100%;
       max-width:230px ;
-      overflow: hidden;
-      margin-bottom: 15px;
-      order: 4; /* Перемещаем слайдер вниз */
+      order: 4; 
     }
     
     .desktop-only {
@@ -888,8 +886,13 @@ body {
     .mobile-slider__slide {
       flex: 0 0 100%;
       width: 100%;
+      margin-right: 20px;
+      opacity: 50%;
+      transition: opacity 0.3s ease;
     }
-    
+    .mobile-slider__slide.active {
+      opacity: 1 !important;
+    }
     .mobile-slider__dots {
       display: flex;
       justify-content: center;
